src/snapshot/tests/snapshots/librojo__snapshot__tests__compute__add_child.snap
---
source: src/snapshot/tests/compute.rs
expression: patch_value
---
removed_instances: []
added_instances:
  - parent_id: id-1
    instance:
      snapshot_id: "00000000000000000000000000000000"
      metadata:
        ignore_unknown_instances: false
        relevant_paths: []
        context:
          script_type: Class
      name: New
      class_name: Folder
      properties: {}
      children: []
updated_instances: []

