src/snapshot/tests/snapshots/librojo__snapshot__tests__compute__remove_child.snap
---
source: src/snapshot/tests/compute.rs
expression: patch_value

---
source: id-2
removed_instances:
  - id-3
added_instances: []
updated_instances: []

