src/snapshot/tests/snapshots/librojo__snapshot__tests__compute__set_name_and_class_name.snap
---
source: src/snapshot/tests/compute.rs
expression: patch_value
---
client_id: ~
removed_instances: []
added_instances: []
updated_instances:
  - id: id-1
    changed_name: Some Folder
    changed_class_name: Folder
    changed_properties: {}
    changed_metadata: ~

