src/snapshot/tests/snapshots/librojo__snapshot__tests__compute__set_property.snap
---
source: src/snapshot/tests/compute.rs
expression: patch_value

---
source: id-2
removed_instances: []
added_instances: []
updated_instances:
  - id: id-1
    changed_name: ~
    changed_class_name: ~
    changed_properties:
      PropertyName:
        String: "Hello, world!"
    changed_metadata: ~

